src/objects/Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>IF( 
    !(ISBLANK(Related_Task__r.Hourly_Rate__c)),
     (Total_Time_Spent__c *Related_Task__r.Hourly_Rate__c),
       IF( 
           !(ISBLANK(Related_Task__r.Project__r.Hourly_Rate__c)),
          (Total_Time_Spent__c * Related_Task__r.Project__r.Hourly_Rate__c),
           (Total_Time_Spent__c * Related_User__r.Hourly_Rate__c))
)</formula>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_Amount__c</fullName>
        <label>Billed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Week__c</fullName>
        <formula>DATE(
    YEAR(TODAY()),
    Month(TODAY()),
    DAY(TODAY())-MOD(TODAY() - DATE(1900, 1, 7), 7))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>D2subD1__c</fullName>
        <formula>IF( End_Time__c=NULL, NOW() - Start_Time__c,End_Time__c - Start_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D2subD1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>This field is used to track ending time for a Time Entry</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check whether timer is in &quot;Progress&quot; or &quot;Stopped&quot;</description>
        <label>IsCompleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Paused__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to track whether timer has been paused by an user or not</description>
        <label>Is Paused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Paused_Time__c</fullName>
        <label>Last Paused Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Related_Task__c</fullName>
        <label>Related Task</label>
        <referenceTo>Assigned_Task__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to get select the related user for a time Entry</description>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>This field is to capture Starting Tie of a timer Entry</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <formula>TEXT((NOW()-Start_Time__c)*24*60*60*1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Time_Spent__c</fullName>
        <description>This field is used to calculate the total time spend for a single time entry</description>
        <label>Total Time Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Time_Entry__c</fullName>
        <label>Weekly Time Entry</label>
        <referenceTo>Weekly_Time_Entry__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Related_Time_Entries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Time Entry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TE-{0000000}</displayFormat>
        <label>Time Entry #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>